--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.company</groupId>
   <artifactId>projetosie</artifactId>
   <version>0.0.1</version>
-  <name>ProjetoSIE</name>
+  <name>ProjetoSIE4</name>
   <properties>
     <bonita.runtime.version>7.14.0</bonita.runtime.version>
     <maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
@@ -92,6 +92,11 @@
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-servlet</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.bonitasoft.connectors</groupId>
+      <artifactId>bonita-connector-email</artifactId>
+      <version>1.3.0</version>
     </dependency>
     <dependency>
       <groupId>com.company.model</groupId>
