--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,16 @@
       <version>1.0.0</version>
     </dependency>
     <dependency>
+      <groupId>org.bonitasoft.connectors</groupId>
+      <artifactId>bonita-connector-database</artifactId>
+      <version>2.0.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.199</version>
+    </dependency>
+    <dependency>
       <groupId>com.company.model</groupId>
       <artifactId>bdm-client</artifactId>
       <version>1.0.0</version>
