--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ProjetoSIE2</name>
+	<name>ProjetoSIE_v17</name>
 	<comment>7.14.0</comment>
 	<projects>
 	</projects>
